# p2soc

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  install.sh  launch.sh  nfpm.yaml  provision.py  requirements-dev.txt  requirements.txt  setup.py  soc-wall-appearance.desktop  soc-wall-setup.desktop  soc-wall.desktop  uninstall.sh  vaultwarden.env
kiosk-host/: pyproject.toml
kiosk-host/host/: __init__.py  appearance.py  backup.py  branding.py  chromium_panel.py  complexity.py  config.py  configcenter.py  configpaths.py  configwin.py  fortivpn.py  guierror.py  health.py  inject.py  launchermenu.py  litebw.py  locker.py  loginmemory.py  main.py  manifest.py  mastersource.py  ospass.py  perf.py  secretstore.py  setupgui.py  siteguard.py  style.py  sysaction.py  totp.py  tray.py  vault.py  vaultseed.py  vaultsetup.py  vpn_log_viewer.py  vpndrivers.py  vpnmanager.py  vpnstatus.py  wall.py  webkit_panel.py  websecurity.py
kiosk-host/tests/: conftest.py  test_appearance.py  test_apply_display_live.py  test_backup.py  test_branding.py  test_button_wiring.py  test_calibrate_runtime.py  test_chromium_security.py  test_complexity.py  test_config_vault.py  test_config_vpns.py  test_configpaths.py  test_configwin_gate.py  test_configwin_reauth.py  test_display_settings.py  test_h3c_captcha.py  test_harden_config.py  test_harden_runtime.py  test_harden_vpn.py  test_host.py  test_inode_argv.py  test_launchermenu.py  test_litebw.py  test_litebw_launcher.py  test_locker.py  test_locker_enroll.py  (+40 more)
(+99 files in other folders)
